Update developer descriptions and names in index.html

--- a/index.html
+++ b/index.html
@@ -222,14 +222,14 @@
                 {
                     name: "Notageek",
                     role: "Lead Developer",
-                    desc: "The brain behind the operation. Loves JavaScript and cybersecurity.",
+                    desc: "The brain behind the website. Loves JavaScript and Python",
                     color: "#00ff9d", // Green
                     icon: "fa-terminal"
                 },
                 {
-                    name: "YourName",
+                    name: "Vercel",
                     role: "Site Owner",
-                    desc: "Managing the deployment and community.",
+                    desc: "Managing the deployment of the website.",
                     color: "#bc13fe", // Purple
                     icon: "fa-crown"
                 }
